changed references to class/xoopsmodule.php, now refers to kernel/module.php
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/smartmedia/trunk@5264 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,8 @@
 * Licence: GNU
 */
 
+- changed: references to class/xoopsmodule.php to kernel/module.php (vaughan)
+
 => Version 0.85 Beta (2005-06-14)
 ====================================
 
